--- a/sass/index-page-components/_nav.sass
+++ b/sass/index-page-components/_nav.sass
@@ -23,3 +23,5 @@ ul
     font-size: .8em
     +break($breaker)
       font-size: .7em
+    +break(320px)
+      font-size: .5em
